--- a/Cine-Front/src/App.css
+++ b/Cine-Front/src/App.css
@@ -25,3 +25,36 @@ h1 {
   margin-bottom: 20px;
   color: #000000;
 }
+form {
+  width: 100%;
+  max-width: 300px;
+  padding: 20px;
+  background: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+  align-items: center;
+}
+form div {
+  margin-bottom: 15px;
+}
+form label {
+  font-weight: bold;
+}
+form input {
+  width: 50%;
+  padding: 10px;
+  font-size: 14px;
+  border: 1px solid #f17a7a;
+  border-radius: 4px;
+}
+form button {
+  padding: 10px 15px;
+  font-size: 14px;
+  color: #ffffff;
+  background-color: #da4e4ec4;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 1%;
+}
