--- a/Cine-Front/src/App.css
+++ b/Cine-Front/src/App.css
@@ -51,10 +51,34 @@ form input {
 form button {
   padding: 10px 15px;
   font-size: 14px;
-  color: #ffffff;
+  color: #020202;
   background-color: #da4e4ec4;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   margin: 1%;
+}
+ul {
+  width: 100%;
+  max-width: 600px;
+  padding: 0;
+  list-style-type: none;
+}
+ul li {
+  background: hsl(0, 41%, 87%);
+  margin-bottom: 10px;
+  padding: 15px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+ul li button {
+  padding: 10px 15px;
+  font-size: 12px;
+  color: #000000;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
