--- a/Cine-Front/src/App.css
+++ b/Cine-Front/src/App.css
@@ -1,84 +1,42 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-image: url("./cine.jpg");
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  width: 100%;
-  color: #333;
-}
 #root {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-h1 {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
   text-align: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  color: #000000;
 }
-form {
-  width: 100%;
-  max-width: 300px;
-  padding: 20px;
-  background: #ffffff;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
-  align-items: center;
+
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
 }
-form div {
-  margin-bottom: 15px;
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
 }
-form label {
-  font-weight: bold;
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
 }
-form input {
-  width: 50%;
-  padding: 10px;
-  font-size: 14px;
-  border: 1px solid #f17a7a;
-  border-radius: 4px;
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
-form button {
-  padding: 10px 15px;
-  font-size: 14px;
-  color: #020202;
-  background-color: #da4e4ec4;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  margin: 1%;
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
 }
-ul {
-  width: 100%;
-  max-width: 600px;
-  padding: 0;
-  list-style-type: none;
+
+.card {
+  padding: 2em;
 }
-ul li {
-  background: hsl(0, 41%, 87%);
-  margin-bottom: 10px;
-  padding: 15px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-ul li button {
-  padding: 10px 15px;
-  font-size: 12px;
-  color: #000000;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+
+.read-the-docs {
+  color: #888;
 }
