--- a/Cine-Front/src/paginas/Pagina2.css
+++ b/Cine-Front/src/paginas/Pagina2.css
@@ -37,6 +37,8 @@ form {
 }
 form div {
   margin-bottom: 15px;
+  display: block;
+  text-align: right;
 }
 form label {
   font-weight: bold;
@@ -47,6 +49,7 @@ form input {
   font-size: 14px;
   border: 1px solid #f17a7a;
   border-radius: 4px;
+  margin-left: 10px;
 }
 form button {
   padding: 10px 15px;
@@ -57,6 +60,10 @@ form button {
   border-radius: 4px;
   cursor: pointer;
   margin: 1%;
+  display: block;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 ul {
   width: 100%;
